# karamelo

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Install.txt  Makefile  README.md  basis_functions.h  centre_of_mass.cpp  centre_of_mass.h  compute.cpp  compute.h  damage.cpp  damage.h  damage_jc.cpp  damage_jc.h  delete_particles.cpp  delete_particles.h  domain.cpp  domain.h  doxygen.config  dump.cpp  dump.h  dump_grid.cpp  dump_grid.h  dump_grid_gz.cpp  dump_grid_gz.h  dump_particle.cpp  dump_particle.h  dump_particle_gz.cpp  dump_particle_gz.h  dump_pyplot.cpp  dump_pyplot.h  eos.cpp  eos.h  eos_fluid.cpp  eos_fluid.h  eos_linear.cpp  (+135 more)
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Inputscripts.dox  Overview.dox
doc/examples/: two-disks.mpm
doc/html/: Commands.html  Commands_8dox.html  GettingStarted.html  InputScripts.html  QuickStartGuide_8dox.html  _formulas.tex  annotated.html  annotated.js  basis__functions_8h.html  basis__functions_8h__dep__incl.map  basis__functions_8h_source.html  centre__of__mass_8cpp__incl.map  centre__of__mass_8cpp__incl.md5  centre__of__mass_8h.html  centre__of__mass_8h__dep__incl.map  centre__of__mass_8h__dep__incl.md5  centre__of__mass_8h__incl.map  centre__of__mass_8h_source.html  classBlock-members.html  classBlock.html  classBlock__-members.html  classBlock__.html  classBlock____inherit__graph.md5  classBlock__inherit__graph.map  classBlock__inherit__graph.md5  classCentreOfMass__coll__graph.map  classCentreOfMass__coll__graph.md5  classCentreOfMass__inherit__graph.md5  classCompute__coll__graph.map  classCompute__inherit__graph.map  classCylinder-members.html  classCylinder.html  classCylinder__inherit__graph.map  classCylinder__inherit__graph.md5  classDamageJohnsonCook.html  classDamageJohnsonCook__inherit__graph.map  classDamage__coll__graph.md5  classDamage__inherit__graph.md5  classDeleteParticles__coll__graph.md5  classDifference-members.html  (+803 more)
doc/html/search/: all_0.js  all_12.js  all_14.js  all_16.js  all_19.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_9.js  classes_a.js  classes_c.js  classes_e.js  classes_f.js  defines_0.js  (+53 more)
kokkos_demo/: CMakeLists.txt  LazyReference.h  dcdread.h  kokkos_demo.cpp  kokkos_test.h  mat2.h  mls_mpm.h  rdf.cpp  vec2.h
kokkos_demo/linalg/: Mat2.h  Matrix.h  Vec2.h  Vector.h  matrix.h  svd.h
open_acc_demo/: CMakeLists.txt  mls_mpm.h  open_acc_demo.cpp
open_acc_demo/linalg/: Mat2.h  Vec2.h  svd.h
src/: CMakeLists.txt  basis_functions.h  bounding_box.h  centre_of_mass.cpp  centre_of_mass.h  compute.cpp  compute.h  compute_average_stress.cpp  compute_average_stress.h  compute_average_temperature.cpp  compute_average_temperature.h  compute_average_velocity.cpp  compute_average_velocity.h  compute_kinetic_energy.cpp  compute_kinetic_energy.h  compute_max_plastic_strain.cpp  compute_max_plastic_strain.h  compute_strain_energy.cpp  compute_strain_energy.h  constants.h  damage.cpp  damage.h  damage_jc.cpp  damage_jc.h  delete_particles.cpp  delete_particles.h  domain.cpp  domain.h  dump.cpp  dump_grid.cpp  dump_grid.h  dump_grid_gz.cpp  dump_grid_gz.h  dump_particle.cpp  dump_particle.h  dump_particle_gz.cpp  dump_particle_gz.h  eos.cpp  eos.h  eos_fluid.cpp  (+184 more)
src/compute/: compute.cpp  compute_average_velocity.cpp  compute_kinetic_energy.cpp  compute_max_plastic_strain.cpp  compute_max_plastic_strain.h  compute_strain_energy.cpp  compute_strain_energy.h
src/domain/: grid.cpp  grid.h  solid.cpp  solid.h
src/dump/: dump_grid.h  dump_particle.cpp  dump_particle_gz.cpp
src/eos/: eos.h  eos_fluid.cpp  eos_fluid.h  eos_linear.cpp  eos_linear.h  eos_shock.cpp  eos_shock.h
src/expression/: expression.h
src/fix/: fix_body_force.cpp  fix_check_solution.cpp  fix_contact_hertz.cpp  fix_contact_hertz.h  fix_contact_min_penetration.cpp  fix_contact_min_penetration_plane.cpp  fix_contact_min_penetration_plane.h  fix_contact_pinball.cpp  fix_contact_pinball.h  fix_cutting_tool.cpp  fix_cutting_tool.h  fix_force_nodes.cpp  fix_impenetrable_surface.cpp  fix_impenetrable_surface.h  fix_indent_minimize_penetration.cpp  fix_indent_minimize_penetration.h  fix_initial_stress.cpp  fix_initial_stress.h  fix_initial_velocity_nodes.cpp  fix_initial_velocity_particles.cpp  fix_initial_velocity_particles.h  fix_meld_tool.cpp  fix_temperature_nodes.cpp  fix_temperature_nodes.h  fix_temperature_particles.cpp  fix_temperature_particles.h  fix_velocity_nodes.cpp  fix_velocity_nodes.h  fix_velocity_particles.cpp  fix_velocity_particles.h
src/framework/: domain.cpp  domain.h  error.cpp  group.cpp  group.h  material.cpp  material.h  memory.h  modify.cpp  modify.h  mpm.cpp  mpm.h  pointers.h  universe.cpp  universe.h  update.cpp  update.h
src/geometry/: bounding_box.h  facet.h  interval.h  octree.h
src/input_output/: input.h  log.cpp  log.h
src/linear_algebra/: determinant.h  eigendecompose.h  givens_rotation.h  inverse.h  matrix.h  qr_decompose.h  singular_value_decompose.h
src/mathematics/: math_special.h  math_utility.h  mpm_math.h
src/mpm/: error.cpp  group.cpp  group.h  material.cpp  material.h  modify.cpp  modify.h  mpm.cpp  mpm.h  pointers.h  universe.cpp  update.cpp
src/region/: region.h  region_cylinder.cpp  region_intersection.h  region_sphere.cpp  region_stl.cpp  region_union.cpp
src/restart/: write_restart.h
src/run/: run.cpp  run.h  run_time.cpp  run_time.h  run_until.cpp  run_while.h
src/strength/: strength.h  strength_fluid.cpp  strength_fluid.h  strength_jc.cpp  strength_jc.h  strength_linear.cpp  strength_linear.h  strength_plastic.cpp  strength_plastic.h  strength_swift.cpp  strength_swift.h
src/style/: CMakeLists.txt  style_command.h  style_compute.h  style_damage.h  style_dump.h  style_eos.h  style_factory.h  style_method.h  style_region.h  style_strength.h  style_temperature.h
src/temperature/: temperature.h  temperature_plastic_work.cpp  temperature_plastic_work.h
src/version/: CMakeLists.txt  version.cpp.in  version.h.in
(+1038 files in other folders)
